--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <input type="text" id="pokemonName" placeholder="Enter pokemon name">
+    <button onclick="fetchData()">Fetch Pokemon</button> <br>
+    <img src="" alt="Pokemon sprites" id="pokemonImage">
+    <div id="details"></p>
+    <script src="script.js"></script>
 </body>
 </html>
